# MPILabs

./: CMakeLists.txt
MPILabs/: CMakeLists.txt  MPILabs.cpp  MPILabs.h
MPILabs/Algorythm/: Cannon.cpp  Cannon.h  Fox.cpp  Fox.h  Linear.cpp  Linear.h
MPILabsConsole/: MPILabsConsole.sln
MPILabsConsole/MPILabsConsole/: MPILabsConsole.cpp  MPILabsConsole.vcxproj  MPILabsConsole.vcxproj.filters
